# bundler

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  bundler.py  dylibbundler.py  macbundler.py  pyproject.toml
tests/: Makefile  test_bundler.py  test_cli.py  test_codesigner.py  test_dylibbundler.py  test_edge_cases.py  test_integration.py  test_new_features.py  test_packager.py  test_security.py
tests/guile/: Makefile  README.md  env.sh  test_guile_app.py
tests/rpath/: Makefile  README.md  example_app.py  test_app.py
